--- a/Restaurant App Modified/style.css
+++ b/Restaurant App Modified/style.css
@@ -1,13 +1,13 @@
 
 header{
     text-align:center;
-    padding:50px 2em 20px 2em;
+    padding:55px 2em 20px 2em;
     background:linear-gradient( #b1d814,#61d6fa 70%); 
   
 
 }
 h1{
-    font-size: 35px;
+    font-size: 50px;
     color:rgb(109, 63, 236);
     text-shadow: 1px 1px white, -1px -1px #444;
     padding:10px  30px;
@@ -21,6 +21,7 @@ h1{
     background:linear-gradient(#e7eed5 20%, #56adc5 100%); 
     margin-bottom:10px;
     padding:5px 10px;
+    font-size:26px;
 
 }
 
@@ -32,38 +33,65 @@ body {
     margin: 10mm;
     margin-top: 2px;
 }
-#login_area{
-    padding:20px;
+#login_area,#signup{
+    padding:40px 50px;
     display:inline-block;
     background:linear-gradient(#e7eed5 20%, #56adc5 100%); 
     font-style:italic;
     font-weight:bold;
-  
-    text-align:left;
+  font-size:20px;
+    text-align:;center
+    width:48%;
 
 }
 #login{
     color:rgb(65, 65, 253);
     font-size:35px;
+    
 }
 .login{
     
-    display:inline-block;
-    margin:1px;
+    display:block;
+    margin:0px;
+    padding-left: 0px;
 
   
     color:rgb(124, 74, 136);
     font-size:28px;
-    text-align:left;
+    
     
 }
-.name_box{
+#name_box,#signup_textbox{
+    padding-left: 67px;
+}
+#address{
     padding-left: 53px;
 }
-#channel{
+#ages{
+    display:inline-block;
+    padding-left: 87px;
+    text-align: left;
+}
+#channel,#whole{
     text-align:center;
 }
+#loginButton{
+    font-weight: bold;
+    font-size:15px;
+    color:blue;
+    border:0.5px solid blue;
+    
+}
+#loginButtonhover{
 
+}
+#signup_button{
+    font-weight: bold;
+    font-size:30px;
+    
+   
+    
+}
 h2 {
     text-align:center;
     
@@ -79,18 +107,9 @@ p1{
     font-size:10mm;
 }
 
-.name{
-    display:inline;
 
-}
 
-#address{
-    position:relative;
-    left:25px;
-}
-#Age{
-    position:relative;
-    left:10px;
+
 }
 .button{
     font-size:10mm;
