--- a/Restaurant App Modified/style.css
+++ b/Restaurant App Modified/style.css
@@ -40,8 +40,8 @@ body {
     font-style:italic;
     font-weight:bold;
   font-size:20px;
-    text-align:;center
-    width:48%;
+    text-align:center;
+    width:30%;
 
 }
 #login{
@@ -62,7 +62,7 @@ body {
     
 }
 #name_box,#signup_textbox{
-    padding-left: 67px;
+    padding-left: 68px;
 }
 #address{
     padding-left: 53px;
@@ -87,10 +87,7 @@ body {
 }
 #signup_button{
     font-weight: bold;
-    font-size:30px;
-    
-   
-    
+    text-align:right;
 }
 h2 {
     text-align:center;
