--- a/COURSERA CSS/styling_links.css
+++ b/COURSERA CSS/styling_links.css
@@ -4,7 +4,7 @@ a{
     background-color: grey;
     display:inline-block;
     margin:20px;
-    float: left;
+    float:left;
     padding:10px;
     width:20%;
     text-align:center;
@@ -28,4 +28,9 @@ a:focus{
 
 a:active{
     border:10px solid pink;
+}
+a:visited{
+    background-color: rgb(20, 238, 227);
+    color:rgb(15, 15, 9);
+    border:5px solid red;
 }
